force-app/main/default/objects/GRV_Models2__c/GRV_Models2__c.object-meta.xml
<CustomObject>
    <label>GRV_Models2</label>
    <nameField>
        <label>GRV_Models2</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRV_Models2</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>