force-app/main/default/objects/GRV_Models2__c/fields/ASYTYP__c.field-meta.xml
<CustomField>
    <fullName>ASYTYP__c</fullName>
    <label>ASYTYP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>