force-app/main/default/objects/GRV_Models2__c/fields/ConfigAssigned__c.field-meta.xml
<CustomField>
    <fullName>ConfigAssigned__c</fullName>
    <label>ConfigAssigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>