force-app/main/default/objects/GRV_Models2__c/fields/CUTR_compliance__c.field-meta.xml
<CustomField>
    <fullName>CUTR_compliance__c</fullName>
    <label>CUTR_compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>