force-app/main/default/objects/GRV_Models2__c/fields/ENGCAT__c.field-meta.xml
<CustomField>
    <fullName>ENGCAT__c</fullName>
    <label>ENGCAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>