force-app/main/default/objects/GRV_Models2__c/fields/FASubModel__c.field-meta.xml
<CustomField>
    <fullName>FASubModel__c</fullName>
    <label>FASubModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>