force-app/main/default/objects/GRV_Models2__c/fields/FiberglassYN__c.field-meta.xml
<CustomField>
    <fullName>FiberglassYN__c</fullName>
    <label>FiberglassYN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>