force-app/main/default/objects/GRV_Models2__c/fields/Fillet_Weld_LP__c.field-meta.xml
<CustomField>
    <fullName>Fillet_Weld_LP__c</fullName>
    <label>Fillet Weld LP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>