force-app/main/default/objects/GRV_Models2__c/fields/PosMinOP__c.field-meta.xml
<CustomField>
    <fullName>PosMinOP__c</fullName>
    <label>PosMinOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>