force-app/main/default/objects/GRV_Models2__c/fields/Ultrasonic__c.field-meta.xml
<CustomField>
    <fullName>Ultrasonic__c</fullName>
    <label>Ultrasonic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>