force-app/main/default/objects/GRV_Models2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>ASYTYP__c</columns>
    <columns>ValveSubModel__c</columns>
    <columns>FASubModel__c</columns>
    <columns>ENGCAT__c</columns>
    <columns>PosLoad__c</columns>
    <columns>PosCMethod__c</columns>
    <columns>PosFullOP__c</columns>
    <columns>PosMinOP__c</columns>
    <columns>PosIntMethod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>